# src/models/ResultGroup.ts
@@ -1,11 +1,13 @@
-import mongoose, { Document, Schema } from "mongoose";
+import mongoose, { Schema, Document } from "mongoose";
 
 export interface IResultGroup extends Document {
-    file_hash: string;
+    session_id: string;
+    created_at: Date;
 }
 
-const ResultGroupSchema: Schema<IResultGroup> = new Schema({
-    file_hash: { type: String, required: true },
+const ResultGroupSchema = new Schema<IResultGroup>({
+    session_id: { type: String, required: true, unique: true },
+    created_at: { type: Date, default: Date.now },
 });
 
 export default mongoose.model<IResultGroup>("ResultGroup", ResultGroupSchema);
